--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
-    "commander": "^2.19.0"
+    "commander": "^2.19.0",
+    "stringify-object": "^3.3.0"
   }
 }
