--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "commander": "^2.19.0",
     "hanson": "^1.2.0",
-    "stringify-object": "^3.3.0"
+    "stringify-object": "^3.3.0",
+    "strip-ansi": "^5.0.0"
   }
 }
