--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "jaywalker",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Extract JSON from a stream of junk text - includes CLI tool",
   "main": "index.js",
+  "bin": {
+    "jaywalker": "./app.js"
+  },
   "scripts": {
     "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hash-bang/jaywalker.git"
   },
   "keywords": [
     "json",
@@ -14,6 +21,10 @@
   ],
   "author": "Matt Carter <m@ttcarter.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/hash-bang/jaywalker/issues"
+  },
+  "homepage": "https://github.com/hash-bang/jaywalker#readme",
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
